﻿============================== next release ==============================

  new data (thanks to Kevin Palm, University of Maryland, College Park, USA, for submitting data in YAML format!)
    main/Mg/Palm.yml
    main/Pd/Palm.yml
    main/Ti/Palm.yml
    main/V/Palm.yml
    main/Zr/Palm.yml
	main/MgH2/Palm.yml
    main/TiH2/Palm.yml
    other/alloys/Pd-H/Palm.yml
    other/alloys/V-H/Palm.yml
    other/alloys/Zr-H/Palm.yml
  new data (thanks to Jose Llorens for suggesting data!)
    main/Ge/Nunley.yml
    main/GeO2/Nunley.yml"
  new data (thanks to Tobias König, Leibniz-Institut für Polymerforschung Dresden, Germany, for submitting data!)
    organic/(C2H6OSi)n - polydimethylsiloxane/Gupta.yml
    organic/(C2H6OSi)n - polydimethylsiloxane/Gupta-UV.yml
    main/TiO2/Sarkar.yml
    other/resists/Micro resist ma-N 405, ma-T 1050.yml
  new data (thanks to Pavel Pankin for submiting data in YAML format!)
    other/mixed organic/PEDOT_PSS/Chen.yml
  new data (thanks to Dr. Errol F. I. Roberts for providing numerical data in YAML format!)
    main/Ir/Roberts.yml
  new data (thanks to Mary Bliss, Pacific Northwest National Laboratory!)
    main/Ar/Grace-liquid-90K.yml"
    main/Ar/Grace-liquid-83.81K.yml
    main/Ar/Grace-solid-83.81K.yml
    main/Ar/Grace-solid-20K.yml
    main/Xe/Grace-liquid-178K.yml
    main/Xe/Grace-liquid-161.35K.yml
    main/Xe/Grace-solid-161.35K.yml
    main/Xe/Grace-solid-80K.yml
  new data (thanks to Braden Czapla for providing numerical data in YAML format!)
    organic/(C5H8O2)n - poly(methyl methacrylate)/Tsuda.yml
    organic/(C5H8O2)n - poly(methyl methacrylate)/Tsuda-LD.yml
    organic/(C5H8O2)n - poly(methyl methacrylate)/Tsuda-BB.yml
    organic/(C2H4)n - polyethylene/Smith.yml
    organic/(C2ClF3)n - polychlorotrifluoroethylene/Smith.yml
    organic/(C6H12)n - polymethylpentene/Smith.yml
    other/commercial plastics/Kapton/Zhang.yml
    other/commercial plastics/Kapton/Smith.yml
    other/commercial plastics/Surlyn A-1601/Smith.yml